feat: add popup page
- color picker and sample dom
- load, save and reset selected color

--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -5,7 +5,15 @@
     <title>Popup | Notion PNG Background Color</title>
 </head>
 <body>
-<label for="favcolor">Select your favorite color:</label>
-<input type="color" id="favcolor" name="favcolor" value="#ff0000">
+<div>
+    <div class="sample">
+        <label for="bg-color">Select PNG background color:</label>
+    </div>
+    <div class="picker-container">
+        <input type="color" id="bg-color" name="bg-color" value="#ff0000">
+        <span class="reset-btn">reset</span>
+    </div>
+
+</div>
 </body>
 </html>
